exports[`BaseView should render its children 0`] = `
Object {
  "$$typeof": Symbol(react.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Object {
      "$$typeof": Symbol(react.element),
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {
        "children": "I am children."
      },
      "ref": null,
      "type": [Function Constructor]
    }
  },
  "ref": null,
  "type": [Function BaseView]
}
`;

exports[`BaseView should support style overriding 0`] = `
Object {
  "$$typeof": Symbol(react.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Object {
      "$$typeof": Symbol(react.element),
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {
        "children": "I am children."
      },
      "ref": null,
      "type": [Function Constructor]
    },
    "style": Object {
      "backgroundColor": "red"
    }
  },
  "ref": null,
  "type": [Function BaseView]
}
`;

exports[`Label should render its children 0`] = `
Object {
  "$$typeof": Symbol(react.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Object {
      "$$typeof": Symbol(react.element),
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {
        "children": "I am children."
      },
      "ref": null,
      "type": [Function Constructor]
    }
  },
  "ref": null,
  "type": [Function BaseView]
}
`;

exports[`Label should support style overriding 0`] = `
Object {
  "$$typeof": Symbol(react.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Object {
      "$$typeof": Symbol(react.element),
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {
        "children": "I am children."
      },
      "ref": null,
      "type": [Function Constructor]
    },
    "style": Object {
      "backgroundColor": "red"
    }
  },
  "ref": null,
  "type": [Function BaseView]
}
`;
